[tool.poetry]
name = "cat-api"
version = "0.0.1"
description = "Consumer Action Taskforce API in Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "catd", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pydantic = "^2.10.6"
aiohttp = "^3.11.13"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
